# mkroot

./: .gitignore  LICENSE  README.md  build  clean.c  clean.h  common.h  concat.c  concat.h  inroot.c  meson.build  mkview.c  rmr.c  saveme.c  setcaps  test  vector.c
