project('mkview', 'c')

exe = executable('mkview',
  'mkview.c',
  'vector.c',
  'concat.c',
  install : true,
)
exe = executable('rmr', 'rmr.c', 'clean.c',
  install : true,
)
exe = executable('inroot', 'inroot.c',
  install : true,
)

# todo: add install script to set capabilities
#add_install_script('install')
